fix(chat): corrects message receipt alignment.

--- a/src/styles/vars/_grid.scss
+++ b/src/styles/vars/_grid.scss
@@ -16,6 +16,10 @@
   align-items: flex-start;
 }
 
+%flex-align-end {
+  align-items: flex-end;
+}
+
 %flex-align-baseline {
   align-items: baseline;
 }
