--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -46,7 +46,8 @@ $radius-sign-warning: 18px;
   width: calc(100vw - 304px);
 
   .receipt-wrapper {
-    @extend %flex-col;
+    @extend %flex-row;
+    @extend %flex-align-end;
     @extend %flex-justify-end;
     margin-left: auto;
     margin-right: $margin-small;
